Possible fix to laggy animation on Mobile Safari
Remove drop-shadow

--- a/src/components/account-info.css
+++ b/src/components/account-info.css
@@ -59,7 +59,7 @@
     hsla(0, 0%, 0%, 0.013) 91.9%,
     hsla(0, 0%, 0%, 0) 100%
   );
-  filter: blur(32px) drop-shadow(0 0 32px black) saturate(3) opacity(0.5);
+  filter: blur(32px) saturate(3) opacity(0.5);
   pointer-events: none;
 }
 .account-container .header-banner:hover {
